update swagger + check otp
